<resources>
    <string name="app_name">THYMU</string>
    <string name="titleMain">Register</string>
    <string name="title">Register</string>
    <string name="text_hint">Email Address</string>
    <string name="text_hint_password">Password</string>
    <string name="hint_mobile">Mobile Number</string>
    <string name="btn_submit">Submit</string>
    <string name="title_login">Log In</string>
    <string name="btn_submit_login">Register</string>
    <string name="btn_submit_log">Log In</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="text_register">Register Here</string>
    <string name="date_card_1">2 Mon AUG</string>
    <string name="date_card_2">3 Tue AUG</string>
    <string name="date_card_3">4 Wen AUG</string>
    <string name="date_card_4">6 Thu AUG</string>
    <string name="date_card_5">5 Thu AUG</string>
    <string name="date_card_6">6 Fri AUG</string>
    <string name="calender">01/08/2021</string>
    <string name="calender_end">12/31/2025</string>
    <string name="btn_txt_expenses">Expenses</string>
    <string name="title_cate">Categories</string>
    <string name="subtitle_cate">Select category to remind</string>
    <string name="txt_hydration">hydration plan</string>
    <string name="txt_hydration1">Hydration plan</string>
    <string name="title_sub_medicine">Medicine</string>
    <string name="txt_period">Menstruation</string>
    <string name="title_expenses">Expenses</string>
    <string name="sub_title_expenses">Insert or view your expenses</string>
    <string name="btn_view_expenses">View Expenses</string>
    <string name="btn_add_expenses">Add New Expenses</string>
    <string name="title_view_expenses">Your Bills</string>
    <string name="title_view_sub_expenses">Edit or delete your previously saved bills</string>
    <string name="edit_expenses">Edit</string>
    <string name="delete_expenses">Delete</string>

    <string name="billing_type">Billing Type</string>
    <string name="txt_hint_type">Bill/ Subscription/ Lease/ Rent/ Package</string>
    <string name="txt_date_add">Billing Date</string>
    <string name="txt_hint_date">Next billing date</string>
    <string name="txt_account">Account Number</string>
    <string name="hint_account">"Ex - 077 257 0000 / 03568458269 "</string>
    <string name="txt_renew">Renewal Period</string>
    <string name="txt_hint_renew">7 Days/ 10 Days/ 14 Days/ 30 Days</string>
    <string name="notReg">Not Registered Yet</string>
    <string name="title_activity_geek">geek</string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="sub_medicine_title">Insert or view  your medicines</string>
    <string name="btn_view_medcine">VIEW MEDICINES</string>
    <string name="btn_add_medcine">Add new medicines</string>
    <string name="insert_titile_medi">Insert medicine information</string>
    <string name="title_medicine">Name of the drug ?</string>

    <string name="input_name_medicine">Name of the medicine</string>
    <string name="input_resaon">What are  you taking for it ?</string>
    <string name="input_healthcondition">Type your condition</string>
    <string name="input_form">Pill/Powder/Drops/Inhaler</string>
    <string name="input_formMEdi">What form is the drug ?</string>
    <string name="input_time">At what time of day do you take your med?</string>
    <string name="input_boolean">yes/no</string>
    <string name="input_timeMEdi">yes/no</string>
    <string name="input_time_medi">yes or no</string>
    <string name="input_day_time">Morning/Noon/Night</string>
    <string name="btn_submit_add">Submit</string>
    <string name="btnDelData">Delete All Data</string>
    <string name="img_btn_cash">Cash Flow</string>
    <string name="subTitleAdd">REMIND MY BILLS</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="expenseTitle">"ADD NEW ACCOUNT OR VIEW PREVIOUS "</string>
    <string name="recycleDel">Delete</string>
    <string name="btn_MEdi_delete">Delete</string>
    <string name="btnMediUpdate">Update</string>
    <string name="nameMedicine">Name of your medicine ?</string>

    <string-array name="items">
        <item>Select item</item>
        <item>Transport</item>
        <item>Food</item>
        <item>House</item>
        <item>Entertainment</item>
        <item>Education</item>
        <item>Charity</item>
        <item>Apparel</item>
        <item>Health</item>
        <item>Personal</item>
        <item>Other</item>
    </string-array>


    <string name="et_weight" />
    <string name="tv_weight">Your Weight/kg</string>
    <string name="tv_waterPlan">Water Plan</string>
    <string name="tv_workout">How Many Minutes Do you Workout Per Day?</string>
    <string name="et_workout" />
    <string name="btn_wakeUp">wakeup time</string>
    <string name="btn_sleeping">bed time</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_wakeUP">wakeup time</string>
    <string name="tv_wakeup">WakeUpTime</string>string>
    <string name="tv_bed">BedTime</string>
    <string name="tv_wake">weight:</string>
    <string name="tv_work">Workout minutes per day:</string>
    <string name="tv_waketime">Wakeup Time</string>
    <string name="tv_w">Weight :</string>
    <string name="tv_workmins">Workout Minutes Per day :</string>
    <string name="tv_wkup">Wakeup Time :</string>
    <string name="tv_wt">Weight/kg :</string>
    <string name="tv_wkmins">Workout minutes per day :</string>
    <string name="tv_wk">Workout minuts per day :</string>
    <string name="tv_slp">Bed time :</string>
    <string name="btn_waterview">my plan</string>
    <string name="btn_dailydrink">Daily Drink</string>
    <string name="tv_topic">My Water Plan</string>
    <string name="btn_getstart">GET STARTED</string>
    <string name="btn_wateredit">Edit</string>
    <string name="btn_popwakeup">Wakeup time</string>
    <string name="btn_popsleep">Bed time</string>
    <string name="tv_daily">Daily Drink/ml=</string>
    <string name="tv_dailyDrink"></string>
    <string name="tv_popwake">Wakeup time</string>
    <string name="tv_popbed">Bed time</string>

</resources>